--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -44,3 +44,33 @@ body {
 .page-leave-to {
     opacity: 0;
 }
+
+.page-banner {
+    min-height: 60vh;
+    padding-top: 75px;
+    display: flex;
+    align-items: center;
+    @include desktop-s {
+      padding-top: 100px;
+      min-height: 75vh;
+    }
+  }
+  
+  .page-banner__title {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    margin-bottom: 32px;
+    @include tablet {
+      font-size: 50px;
+      line-height: 60px;
+      margin-bottom: 0;
+    }
+    @include desktop-s {
+      font-weight: 900;
+    }
+    @include desktop-m {
+      font-size: 72px;
+      line-height: 82px;
+    }
+  }
